# FastAPI

./: .coverage  .env  .gitignore  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: c2c668d8f09e_created_users_table_again.py
src/learning_fastapi/: app.py  database.py  models.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
