[project]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Augusto Mendes",email = "pedroaugusto.mendes035@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0.*"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "learning_fastapi", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"


[tool.poetry.group.dv.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-lenght = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true 
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'fastapi dev .\src\learning_fastapi\app.py'
