[project]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Augusto Mendes",email = "pedroaugusto.mendes035@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "learning_fastapi", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
taskipy = "^1.14.1"


[tool.poetry.group.dv.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true 
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'fastapi dev ./src/learning_fastapi/app.py'

pre_test = 'task lint'
test = 'pytest --cov=./src\learning_fastapi -vv' 
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'